tests/paczka1/small_fuzzy/86669269.err
Error in line 4: vH2Yjy S366 26,9
Error in line 12: vH2Yjy A703 56,2
